
check_PROGRAMS = \
	api_PwDClearUseCount \
	api_PwDCreateSchema \
	api_PwDDecrementUseCount \
	api_PwDDeleteSchema \
	api_PwDIncrementUseCount \
	api_PwDLoadBlacklistedTopologies \
	api_PwDTopologyIsBlacklisted \
	api_PwDVerifySchema \
	api_PwLCalcLevDistance \
	api_PwLCheckLevDistance \
	api_PwSBaseNTo63Bit \
	api_PwSChomp \
	api_PwSDirname \
	api_PwSLevenshteinDistance \
	api_PwTIdToTopology \
	api_PwTIsPasswordInTokenSet \
	api_PwTPasswordToTopology \
	api_PwTTopologyToId \
	api_PwVGetLibraryVersion \
	api_PwVGetModuleVersion \
	api_PwVGetReleaseString

EXTRA_DIST = $(TESTS)

api_PwDClearUseCount_CFLAGS = -g -I../../include @tap_cflags@
api_PwDClearUseCount_LDADD = -lpathwell @tap_ldadd@
api_PwDClearUseCount_LDFLAGS = -L$(top_builddir)/src/libpathwell/.libs @tap_ldflags@

api_PwDCreateSchema_CFLAGS = -g -I../../include @tap_cflags@
api_PwDCreateSchema_LDADD = -lpathwell @tap_ldadd@
api_PwDCreateSchema_LDFLAGS = -L$(top_builddir)/src/libpathwell/.libs @tap_ldflags@

api_PwDDecrementUseCount_CFLAGS = -g -I../../include @tap_cflags@
api_PwDDecrementUseCount_LDADD = -lpathwell @tap_ldadd@
api_PwDDecrementUseCount_LDFLAGS = -L$(top_builddir)/src/libpathwell/.libs @tap_ldflags@

api_PwDDeleteSchema_CFLAGS = -g -I../../include @tap_cflags@
api_PwDDeleteSchema_LDADD = -lpathwell @tap_ldadd@
api_PwDDeleteSchema_LDFLAGS = -L$(top_builddir)/src/libpathwell/.libs @tap_ldflags@

api_PwDIncrementUseCount_CFLAGS = -g -I../../include @tap_cflags@
api_PwDIncrementUseCount_LDADD = -lpathwell @tap_ldadd@
api_PwDIncrementUseCount_LDFLAGS = -L$(top_builddir)/src/libpathwell/.libs @tap_ldflags@

api_PwDLoadBlacklistedTopologies_CFLAGS = -g -I../../include @tap_cflags@
api_PwDLoadBlacklistedTopologies_LDADD = -lpathwell @tap_ldadd@
api_PwDLoadBlacklistedTopologies_LDFLAGS = -L$(top_builddir)/src/libpathwell/.libs @tap_ldflags@

api_PwDTopologyIsBlacklisted_CFLAGS = -g -I../../include @tap_cflags@
api_PwDTopologyIsBlacklisted_LDADD = -lpathwell @tap_ldadd@
api_PwDTopologyIsBlacklisted_LDFLAGS = -L$(top_builddir)/src/libpathwell/.libs @tap_ldflags@

api_PwDVerifySchema_CFLAGS = -g -I../../include @tap_cflags@
api_PwDVerifySchema_LDADD = -lpathwell @tap_ldadd@
api_PwDVerifySchema_LDFLAGS = -L$(top_builddir)/src/libpathwell/.libs @tap_ldflags@

api_PwLCalcLevDistance_CFLAGS = -g -I../../include @tap_cflags@
api_PwLCalcLevDistance_LDADD = -lpathwell @tap_ldadd@
api_PwLCalcLevDistance_LDFLAGS = -L$(top_builddir)/src/libpathwell/.libs @tap_ldflags@

api_PwLCheckLevDistance_CFLAGS = -g -I../../include @tap_cflags@
api_PwLCheckLevDistance_LDADD = -lpathwell @tap_ldadd@
api_PwLCheckLevDistance_LDFLAGS = -L$(top_builddir)/src/libpathwell/.libs @tap_ldflags@

api_PwSBaseNTo63Bit_CFLAGS = -g -I../../include @tap_cflags@
api_PwSBaseNTo63Bit_LDADD = -lpathwell -lgmp @tap_ldadd@
api_PwSBaseNTo63Bit_LDFLAGS = -L$(top_builddir)/src/libpathwell/.libs @tap_ldflags@

api_PwSChomp_CFLAGS = -g -I../../include @tap_cflags@
api_PwSChomp_LDADD = -lpathwell @tap_ldadd@
api_PwSChomp_LDFLAGS = -L$(top_builddir)/src/libpathwell/.libs @tap_ldflags@

api_PwSDirname_CFLAGS = -g -I../../include @tap_cflags@
api_PwSDirname_LDADD = -lpathwell @tap_ldadd@
api_PwSDirname_LDFLAGS = -L$(top_builddir)/src/libpathwell/.libs @tap_ldflags@

api_PwSLevenshteinDistance_CFLAGS = -g -I../../include @tap_cflags@
api_PwSLevenshteinDistance_LDADD = -lpathwell @tap_ldadd@
api_PwSLevenshteinDistance_LDFLAGS = -L$(top_builddir)/src/libpathwell/.libs @tap_ldflags@

api_PwTIdToTopology_CFLAGS = -g -I../../include @tap_cflags@
api_PwTIdToTopology_LDADD = -lpathwell @tap_ldadd@
api_PwTIdToTopology_LDFLAGS = -L$(top_builddir)/src/libpathwell/.libs @tap_ldflags@

api_PwTIsPasswordInTokenSet_CFLAGS = -g -I../../include @tap_cflags@
api_PwTIsPasswordInTokenSet_LDADD = -lpathwell @tap_ldadd@
api_PwTIsPasswordInTokenSet_LDFLAGS = -L$(top_builddir)/src/libpathwell/.libs @tap_ldflags@

api_PwTPasswordToTopology_CFLAGS = -g -I../../include @tap_cflags@
api_PwTPasswordToTopology_LDADD = -lpathwell @tap_ldadd@
api_PwTPasswordToTopology_LDFLAGS = -L$(top_builddir)/src/libpathwell/.libs @tap_ldflags@

api_PwTTopologyToId_CFLAGS = -g -I../../include @tap_cflags@
api_PwTTopologyToId_LDADD = -lpathwell @tap_ldadd@
api_PwTTopologyToId_LDFLAGS = -L$(top_builddir)/src/libpathwell/.libs @tap_ldflags@

api_PwVGetLibraryVersion_CFLAGS = -g -I../../include @tap_cflags@
api_PwVGetLibraryVersion_LDADD = -lpathwell @tap_ldadd@
api_PwVGetLibraryVersion_LDFLAGS = -L$(top_builddir)/src/libpathwell/.libs @tap_ldflags@

api_PwVGetModuleVersion_CFLAGS = -g -I../../include @tap_cflags@
api_PwVGetModuleVersion_LDADD = -lpathwell @tap_ldadd@
api_PwVGetModuleVersion_LDFLAGS = -L$(top_builddir)/src/libpathwell/.libs @tap_ldflags@

api_PwVGetReleaseString_CFLAGS = -g -I../../include @tap_cflags@
api_PwVGetReleaseString_LDADD = -lpathwell @tap_ldadd@
api_PwVGetReleaseString_LDFLAGS = -L$(top_builddir)/src/libpathwell/.libs @tap_ldflags@

TESTS = test.t

include $(top_srcdir)/utils/common.am
